CSS Styles for Template

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,180 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Hello world
+    
+    <header class="header">
+        <div id="wrapper" class="header_block">
+            <div class="header_left">
+                <a class="logo">Food<span class="logo_hub">Hub.</span></a>
+                <nav class="header-nav">
+                    <a href="#" class="header-nav_item">Home</a>
+                    <a href="#" class="header-nav_item">Menu</a>
+                    <a href="#" class="header-nav_item">Service</a>
+                    <a href="#" class="header-nav_item">Delivery</a>
+                    <a href="#" class="header-nav_item">Contact</a>
+                </nav>
+            </div>
+            
+            <div class="header_login">
+                <a href="#" class="header_login_item">Login</a>
+                <a class="header_login_market">
+                    <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.55011 5.39702C1.56263 5.23778 1.63347 5.08921 1.74852 4.98088C1.86357 4.87254 2.01439 4.81241 2.17094 4.81244H10.8291C10.9856 4.81241 11.1364 4.87254 11.2515 4.98088C11.3665 5.08921 11.4374 5.23778 11.4499 5.39702L11.996 12.3357C12.0098 12.5105 11.9879 12.6864 11.9318 12.8522C11.8756 13.018 11.7865 13.1702 11.6699 13.2991C11.5533 13.428 11.4118 13.5309 11.2544 13.6013C11.0969 13.6717 10.9269 13.7081 10.755 13.7082H2.24505C2.07313 13.7081 1.90309 13.6717 1.74562 13.6013C1.58816 13.5309 1.44668 13.428 1.3301 13.2991C1.21352 13.1702 1.12436 13.018 1.06824 12.8522C1.01211 12.6864 0.990239 12.5105 1.00399 12.3357L1.54948 5.39702H1.55011Z" stroke="black" stroke-width="0.812543" stroke-linecap="round" stroke-linejoin="round"/><path d="M8.99041 6.71868V3.54164C8.99041 2.86755 8.72799 2.22108 8.26087 1.74443C7.79375 1.26778 7.1602 1 6.4996 1C5.839 1 5.20545 1.26778 4.73833 1.74443C4.27121 2.22108 4.00879 2.86755 4.00879 3.54164V6.71868" stroke="black" stroke-width="0.812543" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                    <span class="counter">3</span>
+                </a>
+            </div>
+        </div>
+        <img src="images/bg/01.png" class="bg-item bg-item_right" alt="Background Image">
+    </header>
+
+    <section class="welcome">
+        <img src="images/bg/02.png" class="bg-item bg-item_left_bottom" alt="Background Image">
+        <div id="wrapper">
+
+            <div class="welcome_columns">
+                <div class="welcome_column">
+                    <p class="welcome_small-title">Welcome to Foodhub</p>
+                    <h1 class="welcome_title title">Enjoy Healthy & Tasty Food</h1>
+                    <p class="welcome_subtitle subtitle">Food is usually of plant, animal or fungal origin, and contains essential nutrients, such as carbohydrates, fats, proteins, vitamins, or minerals.</p>
+                    <button class="welcome_button btn btn-grey">Explore Menu</button>
+                </div>
+                <div class="welcome_column">
+                    <img src="images/welcome.png" alt="Welcome to FoodHub">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="category">
+        <div id="wrapper">
+
+            <div class="category_items">
+                <div class="category_item">
+                    <span class="category_item_image">
+                        <img src="images/cat1.png" alt="Category">
+                    </span>
+                    <h3 class="category_item_title">Online Food Sell</h3>
+                </div>
+
+                <div class="category_item">
+                    <span class="category_item_image">
+                        <img src="images/cat2.png" alt="Category">
+                    </span>
+                    <h3 class="category_item_title">Delivery Service</h3>
+                </div>
+                <div class="category_item">
+                    <span class="category_item_image">
+                        <img src="images/cat3.png" alt="Category">
+                    </span>
+                    <h3 class="category_item_title">Catering Service</h3>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="about-us">
+        <div id="wrapper">
+            <div class="about-us_columns">
+                <div class="about-us_column">
+                    <img src="images/block-1.png" alt="About Us">
+                </div>
+                <div class="about-us_column">
+                    <h2 class="about-us_title title">Serving Best Food is Our First Priority</h2>
+                    <p class="about-us_subtitle subtitle">nutrients used in the body of an organism to sustain growth and vital processes and to furnish energy. The absorption and utilization of food by the body is fundamental to nutrition and is facilitated by digestion</p>
+                    <button class="btn btn_yellow">Learn About Us</button>
+                </div>
+            </div>
+        </div>
+        <img src="images/bg/03.png" class="bg-item bg-item_right" alt="Backgound Image">
+    </section>
+
+    <section class="food">
+        <div id="wrapper">
+
+            <h2 class="food_title title">We Offer People Many Type of Food</h2>
+            <div class="food_blocks">
+                <div class="food_block food_block_active">
+                    <div class="food_block_header">
+                        <img src="images/food-1.png" class="food_block_image" alt="Traditional Food">
+                        <div class="food_block_items">
+                            <div class="food_block_stars">
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                            </div>
+                            <p class="food_block_items_text">300+ Items Availble</p>
+                        </div>
+                    </div>
+                    <h4 class="food_block_title title">Local/Traditional Food</h4>
+                    <p class="food_block_subtitle subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="food_block">
+                    <div class="food_block_header">
+                        <div class="food_block_image"><img src="images/food-2.png" alt="Traditional Food"></div>
+                        <div class="food_block_items">
+                            <div class="food_block_stars">
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                            </div>
+                            <p class="food_block_items_text">140+ Items Availble</p>
+                        </div>
+                    </div>
+                    <h4 class="food_block_title title">Inter/Continental Food</h4>
+                    <p class="food_block_subtitle subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="food_block">
+                    <div class="food_block_header">
+                        <div class="food_block_image"><img src="images/food-3.png" alt="Traditional Food"></div>
+                        <div class="food_block_items">
+                            <div class="food_block_stars">
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                                <i class="food_block_star"></i>
+                            </div>
+                            <p class="food_block_items_text">200+ Items Availble</p>
+                        </div>
+                    </div>
+                    <h4 class="food_block_title title">Fastfood</h4>
+                    <p class="food_block_subtitle subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+            </div>
+
+            <div class="food_counter">
+                <span class="food_count"></span>
+                <span class="food_count food_count_active"></span>
+                <span class="food_count"></span>
+            </div>
+
+        </div>
+
+        <img src="images/bg/04.png" alt="Background Image" class="bg-item bg-item_left_bottom">
+    </section>
+
+    <section class="discount">
+        <div id="wrapper">
+            <img src="images/bg/05.png" alt="" class="discount_bg discount_bg_top bg-item">
+            <div class="discount_block">
+                <h3 class="discount_title title">Up to <span class="discount_title_active">50%</span> Discount on Selected Items</h3>
+                <p class="discount_subtitle subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <div class="discount_buttons">
+                    <button class="discount_btn btn btn_black">All Discount Item</button>
+                    <button class="discount_btn btn">View All Menu</button>
+                </div>
+            </div>
+            <img src="images/bg/05.png" alt="" class="discount_bg discount_bg_bottom bg-item">
+
+        </div>
+    </section>
 </body>
 </html>
